--- a/calendar/index.html
+++ b/calendar/index.html
@@ -7,17 +7,23 @@
     <title>Calendar app</title>
 </head>
 <body>
-   <h1 class="title">Calendar App</h1> 
-   <div class="calendar-container">
-        <div class="month-container">
-            <div class="left-triangle"></div>
-            <h2 class="month"></h2>
-            <div class="right-triangle"></div>
+    <header>
+        <h1 class="title">Calendar App</h1> 
+    </header>
+   <div class="calendar">
+        <div class="month">
+            <div class="prev-month">
+                <img class="prev-arrow" src="images/left-arrow.webp" alt="prev month arrow" width="20px">
+            </div>
+            <h2 class="target-month"></h2>
+            <div class="next-month">
+                <img class="next-arrow" src="images/right-arrow.webp" alt="next month arrow" width="20px">
+            </div>
         </div>
-            <p class="date"></p>
-        <div class="calendar-table-container">
-            <table class="calendar-table">
-                <tr>
+        <div class="date">
+            <p class="current-date"></p>
+            <table class="date-table">
+                <tr class="days">
                     <th>Sun</th>
                     <th>Mon</th>
                     <th>Tue</th>
@@ -27,53 +33,62 @@
                     <th>Sat</th>
                 </tr>
                 <tr>
-                    <td class="box-00"></td>
-                    <td class="box-01"></td>
-                    <td class="box-02"></td>
-                    <td class="box-03"></td>
-                    <td class="box-04"></td>
-                    <td class="box-05"></td>
-                    <td class="box-06"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
                 </tr>
                 <tr>
-                    <td class="box-10"></td>
-                    <td class="box-11"></td>
-                    <td class="box-12"></td>
-                    <td class="box-13"></td>
-                    <td class="box-14"></td>
-                    <td class="box-15"></td>
-                    <td class="box-16"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
                 </tr>
                 <tr>
-                    <td class="box-20"></td>
-                    <td class="box-21"></td>
-                    <td class="box-22"></td>
-                    <td class="box-23"></td>
-                    <td class="box-24"></td>
-                    <td class="box-25"></td>
-                    <td class="box-26"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
                 </tr>
                 <tr>
-                    <td class="box-30"></td>
-                    <td class="box-31"></td>
-                    <td class="box-32"></td>
-                    <td class="box-33"></td>
-                    <td class="box-34"></td>
-                    <td class="box-35"></td>
-                    <td class="box-36"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
                 </tr>
                 <tr>
-                    <td class="box-40"></td>
-                    <td class="box-41"></td>
-                    <td class="box-42"></td>
-                    <td class="box-43"></td>
-                    <td class="box-44"></td>
-                    <td class="box-45"></td>
-                    <td class="box-46"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                </tr>
+                <tr>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
+                    <td class="day"></td>
                 </tr>
             </table>
         </div>
    </div>
-   <script src="main.js"></script>
+   <script type="module" src="main.js"></script>
 </body>
 </html>
