Refacción de código

--- a/shop-cart/index.html
+++ b/shop-cart/index.html
@@ -16,7 +16,7 @@
    <main>
         <h2 class="products-title">Products</h2>
         <hr class="divisor" />
-        <div class="products-container">
+        <div class="products">
         </div>
    </main>
    <script src="main.js"></script>
