--- a/dice-battle/index.html
+++ b/dice-battle/index.html
@@ -4,42 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <title>Dice Quest</title>
 </head>
 <body>
     <h1 class="title">Dice Battle</h1>
     <main class="main-board">
-        <div class="player1-board">
-            <h2 class="player1 player-name">Player 1</h2>
-            <p class="player1 health-text"></p>
-            <div class="player1 health-bar">
-                <div class="gap one"></div>
-                <div class="gap two"></div>
-                <div class="gap three"></div>
-                <div class="gap four"></div>
-                <div class="gap five"></div>
+        <div class="player" id="one">
+            <h2 class="player-name">Player 1</h2>
+            <p class="health-text"></p>
+            <div class="health-bar">
+                <div class="gap"></div>
+                <div class="gap"></div>
+                <div class="gap"></div>
+                <div class="gap"></div>
+                <div class="gap"></div>
             </div>
         </div>
         <div class="dice-board">
             <h2>Roll dices</h2>
             <p class="current-turn">Player's 1 turn</p>
             <div class="dices-container">
-                <div class="dice one">I</div>
-                <div class="dice two">I</div>
+                <div class="dice one">&#128128;</div>
+                <div class="dice two">&#128128;</div>
             </div>
             <div class="button-container">
                 <button class="roll-button">ROLL</button>
             </div>
         </div>
-        <div class="player2-board">
-            <h2 class="player2 player-name">Player 2</h2>
-            <p class="player2 health-text"></p>
-            <div class="player2 health-bar">
-                <div class="gap one"></div>
-                <div class="gap two"></div>
-                <div class="gap three"></div>
-                <div class="gap four"></div>
-                <div class="gap five"></div>
+        <div class="player" id="two">
+            <h2 class="player-name">Player 2</h2>
+            <p class="health-text"></p>
+            <div class="health-bar">
+                <div class="gap"></div>
+                <div class="gap"></div>
+                <div class="gap"></div>
+                <div class="gap"></div>
+                <div class="gap"></div>
             </div>
         </div>
     </main>
