--- a/pomodoro-timer/index.html
+++ b/pomodoro-timer/index.html
@@ -8,13 +8,11 @@
 </head>
 
 <body>
-    <div class="toolbox">
-        <div class="header">
-            <h1 class="main-heading">Pomodoro timer</h1>
-        </div>
-        <div class="timer-container">
-            <p class="timer">25:00</p>
-        </div>
+    <h1 class="main-heading">Pomodoro timer</h1>
+    <div class="timer-container">   
+        <p class="cue-text">Focus!</p>
+        <p class="session-status"></p>
+        <div class="timer"></div>
         <div class="buttons">
             <button class="start">Start</button>
             <button class="reset">Reset</button>
