Refactorización de código e implementación de nuevas caracter

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -22,71 +22,10 @@
         </div>
         <div class="date">
             <p class="current-date"></p>
-            <table class="date-table">
-                <tr class="days">
-                    <th>Sun</th>
-                    <th>Mon</th>
-                    <th>Tue</th>
-                    <th>Wed</th>
-                    <th>Thu</th>
-                    <th>Fri</th>
-                    <th>Sat</th>
-                </tr>
-                <tr>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                </tr>
-                <tr>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                </tr>
-                <tr>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                </tr>
-                <tr>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                </tr>
-                <tr>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                </tr>
-                <tr>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                    <td class="day"></td>
-                </tr>
-            </table>
+        </div>
+        <table class="date-table"></table>
+        <div class="events">
+            <p class="event-list">Select a date to see its events</p>
         </div>
    </div>
    <script type="module" src="main.js"></script>
