Diccionario modificado y caracteristica de ayuda

--- a/wordle/index.html
+++ b/wordle/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <header>
+        <button class="language">ES</button>
         <h1>Wordle!</h1>
+        <button class="help-btn">?</button>
     </header>
     <main>
         <div class="guesses">
