terminacion de portfolio

--- a/portfolio-web/index.html
+++ b/portfolio-web/index.html
@@ -14,6 +14,17 @@
     <main>
 
     </main>
+    <footer>
+        <address>
+            Contacto: 
+            <ul>
+                <li>Mail: <a href="mailto:funes.tomas99@gmail.com">funes.tomas99@gmail.com</a></li>
+                <li><a href="https://linkedin.com/in/tofun" target="_blank">Linkedin</a></li>
+                <li><a href="https://github.com/TomasFunes" target="_blank">Github</a></li>
+            </ul>
+
+        </address>
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
